--- a/protocolo/protocolo.html
+++ b/protocolo/protocolo.html
@@ -28,10 +28,10 @@
           <span class="label">Objeto Esquecido</span>
         </button></a>
         
-        <button class="nav-item" data-section="historico">
-          <span class="icon">📜</span>
-          <span class="label">Laudo Medico</span>
-        </button>
+        <a href="../reembolso/reembolso.html"><button class="nav-item" data-section="historico">
+          <span class="icon">💱</span>
+          <span class="label">Reembolso</span>
+        </button></a>
         <button class="nav-item" data-section="config">
           <span class="icon">👩🏽‍💻</span>
           <span class="label">Supervisão</span>
